# cmake_test_project

app/: CMakeLists.txt  build.sh
app/src/: main.cpp  tools.cpp  tools.h
headerlib/: CMakeLists.txt
headerlib/cmake/: headerlib-config.cmake
headerlib/include/: myheaderlib.h
mathlib/: CMakeLists.txt  README.md
mathlib/include/: mymath.h
mylib/: CMakeLists.txt  README.md  build.sh
mylib/cmake/: mylibConfig.cmake
mylib/include/: mylib.h
mylib/modules/: CMakeLists.txt
mylib/modules/mathlib/: CMakeLists.txt
mylib/modules/mathlib/cmake/: mathlib-config.cmake
mylib/modules/mathlib/include/: mymath.h
mylib/modules/mathlib/src/: mymath.cpp
mylib/modules/modulea/: CMakeLists.txt
mylib/modules/modulea/cmake/: modulea-config.cmake  moduleaConfig.cmake
mylib/modules/modulea/include/: modulea.h
mylib/modules/modulea/src/: account.cpp  account.h  modulea.cpp
mylib/modules/moduleb/: CMakeLists.txt
mylib/modules/moduleb/cmake/: modulebConfig.cmake
mylib/modules/moduleb/include/: moduleb.h
mylib/modules/moduleb/src/: moduleb.cpp
mylib/modules/modulec/: CMakeLists.txt
mylib/modules/modulec/cmake/: modulecConfig.cmake
mylib/modules/modulec/include/: modulec.h
mylib/modules/modulec/src/: modulec.cpp
mylib/mylib/: CMakeLists.txt
mylib/mylib/cmake/: mylib-config.cmake
mylib/mylib/src/: mylib.cpp
mylib/src/: mylib.cpp
