CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(app C CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})

add_compile_definitions(MYLIB_STATIC)

find_package(mylib REQUIRED)
find_package(headerlib REQUIRED)

file(GLOB PROJECT_SOURCES
	"${CMAKE_CURRENT_LIST_DIR}/src/*.cpp"
	)

file(GLOB PROJECT_HEADERS
	"${CMAKE_CURRENT_LIST_DIR}/include/*.h"
	)

add_executable(app ${PROJECT_SOURCES} ${PROJECT_HEADERS})

target_link_libraries(app
	mylib::mylib
	headerlib::headerlib
)

install(
	TARGETS app
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	)

install(FILES $<TARGET_RUNTIME_DLLS:app> TYPE BIN)