set(MODULE_NAME "mathlib")
set(MODULE_NAMESPACE "mathlib::")
set(MODULE_ALIAS "${MODULE_NAMESPACE}${MODULE_NAME}")
set(MODULE_EXPORT "mathlibexport")

CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(${MODULE_NAME} LANGUAGES C CXX VERSION 1.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/buildoutput")

file(GLOB PROJECT_SOURCES
	"${CMAKE_CURRENT_LIST_DIR}/src/*.cpp"
	)

file(GLOB PROJECT_HEADERS
	"${CMAKE_CURRENT_LIST_DIR}/src/*.h"
	)
	
file(GLOB PUBLIC_HEADERS
	"${CMAKE_CURRENT_LIST_DIR}/include/*.h"
)

add_library(${MODULE_NAME} OBJECT ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${PUBLIC_HEADERS})
add_library(${MODULE_ALIAS} ALIAS ${MODULE_NAME})

set_target_properties(${MODULE_NAME} PROPERTIES
	PUBLIC_HEADER ${PUBLIC_HEADERS}
	)

target_include_directories(${MODULE_NAME}
	PUBLIC		
		$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

include(CMakePackageConfigHelpers)
include(GNUInstallDirs)

#install(
#	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include
#	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
#)

install(
	TARGETS ${MODULE_NAME}
	EXPORT ${MODULE_EXPORT}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	)

export(
	EXPORT ${MODULE_EXPORT}
	NAMESPACE ${MODULE_NAMESPACE}
	FILE ${MODULE_NAME}-targets.cmake
)

install(
	EXPORT ${MODULE_EXPORT}
	NAMESPACE ${MODULE_NAMESPACE}
	FILE ${MODULE_NAME}-targets.cmake
	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${MODULE_NAME}
)

install(
	FILES
		${CMAKE_CURRENT_LIST_DIR}/cmake/${MODULE_NAME}-config.cmake
	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${MODULE_NAME}
)