set(MODULE_NAME "modulea")
set(MODULE_NAMESPACE "mylib::")
set(MODULE_ALIAS "${MODULE_NAMESPACE}${MODULE_NAME}")
set(MODULE_EXPORT "${MODULE_NAME}export")

CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(${MODULE_NAME} LANGUAGES C CXX VERSION 1.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/buildoutput")

set(PROJECT_SOURCES
	${CMAKE_CURRENT_LIST_DIR}/src/modulea.cpp
	${CMAKE_CURRENT_LIST_DIR}/src/account.cpp
)

set(PROJECT_HEADERS
	${CMAKE_CURRENT_LIST_DIR}/src/account.h
)
	
set(PROJECT_PUBLIC_HEADERS
	${CMAKE_CURRENT_LIST_DIR}/include/modulea.h
)

add_library(${MODULE_NAME} STATIC ${PROJECT_SOURCES} ${PROJECT_HEADERS} ${PROJECT_PUBLIC_HEADERS})
add_library(${MODULE_ALIAS} ALIAS ${MODULE_NAME})

set_target_properties(${MODULE_NAME} PROPERTIES
	PUBLIC_HEADER ${PROJECT_PUBLIC_HEADERS}
	)

target_include_directories(${MODULE_NAME}
	PUBLIC		
		$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
        $<INSTALL_INTERFACE:include>
	PRIVATE
		$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>
)

##################
# INSTALL / EXPORT

option(EXPORT_MODULE "Export the module" OFF)
if(EXPORT_MODULE)

	message(STATUS "EXPORTING MODULE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")

	include(CMakePackageConfigHelpers)
	include(GNUInstallDirs)

	install(
		TARGETS ${MODULE_NAME}
		EXPORT ${MODULE_EXPORT}
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
		INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	)

	export(
		EXPORT ${MODULE_EXPORT}
		NAMESPACE ${MODULE_NAMESPACE}
		FILE ${MODULE_NAME}-targets.cmake
	)

	install(
		EXPORT ${MODULE_EXPORT}
		NAMESPACE ${MODULE_NAMESPACE}
		FILE ${MODULE_NAME}-targets.cmake
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${MODULE_NAME}
	)

	install(
		FILES
			${CMAKE_CURRENT_LIST_DIR}/cmake/${MODULE_NAME}-config.cmake
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${MODULE_NAME}
	)
else()
	install(
		TARGETS ${MODULE_NAME}
		EXPORT ${MODULE_EXPORT}
		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	)
endif()